--- a/app/src/main/res/layout/activity_postadd.xml
+++ b/app/src/main/res/layout/activity_postadd.xml
@@ -90,7 +90,7 @@
 
 
             <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/amount"
+                android:id="@+id/place"
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -166,7 +166,7 @@
             </LinearLayout>
 
             <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/size"
+                android:id="@+id/sutra"
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -174,6 +174,21 @@
                 android:layout_marginTop="3dp"
                 android:layout_marginRight="5dp"
                 android:hint="Sutra">
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" />
+            </com.google.android.material.textfield.TextInputLayout>
+
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/country"
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="5dp"
+                android:layout_marginTop="3dp"
+                android:layout_marginRight="5dp"
+                android:hint="Country">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:layout_width="match_parent"
