--- a/app/src/main/res/layout/fragment_wishlist.xml
+++ b/app/src/main/res/layout/fragment_wishlist.xml
@@ -21,7 +21,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="5dp"
-            android:text="Rentals"
+            android:text="Vicharan"
             android:textColor="#ffffff"
             android:textSize="28sp"
             android:textStyle="bold" />
