--- a/app/src/main/res/layout/activity_apartment_details.xml
+++ b/app/src/main/res/layout/activity_apartment_details.xml
@@ -55,12 +55,12 @@
                 android:orientation="horizontal">
 
                 <TextView
-                    android:id="@+id/apartmentName"
+                    android:id="@+id/title"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="5dp"
                     android:layout_marginTop="5dp"
-                    android:text="Apartment"
+                    android:text="Title"
                     android:textColor="@color/quantum_black_100"
                     android:textSize="22sp"
                     android:textStyle="bold" />
@@ -74,11 +74,11 @@
                 android:orientation="horizontal">
 
                 <TextView
-                    android:id="@+id/price"
+                    android:id="@+id/place"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="5dp"
-                    android:text="999$"
+                    android:text="place"
                     android:textColor="@color/quantum_black_100"
                     android:textSize="25sp"
                     android:textStyle="bold" />
@@ -100,37 +100,7 @@
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">
 
-
-                <ImageView
-                    android:layout_width="30dp"
-                    android:layout_height="30dp"
-                    android:layout_gravity="center"
-                    android:layout_marginLeft="5dp"
-                    android:layout_marginTop="5dp"
-                    android:layout_marginBottom="5dp"
-                    android:src="@drawable/locationpin" />
-
-                <TextView
-                    android:id="@+id/address"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="10dp"
-                    android:layout_marginTop="5dp"
-                    android:text="Montreal"
-                    android:textColor="#3cb6d3"
-                    android:textSize="25sp"
-                    android:textStyle="bold" />
-
             </LinearLayout>
-
-            <TextView
-                android:id="@+id/description"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="5dp"
-                android:layout_marginTop="5dp"
-                android:text="The Apartment is equiped with a full range of appliances"
-                android:textSize="18sp" />
 
             <com.google.android.material.tabs.TabLayout
                 android:id="@+id/tablayout"
@@ -153,21 +123,6 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp" />
-
-
-            <Button
-                android:id="@+id/buyapartment"
-                style="@style/Widget.AppCompat.Button"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginLeft="10dp"
-                android:layout_marginTop="15dp"
-                android:layout_marginRight="10dp"
-                android:backgroundTint="#3cb6d3"
-                android:singleLine="true"
-                android:text="Contact Owner" />
-
 
         </LinearLayout>
 
