--- a/app/src/main/res/layout/activity_wishlistactivity.xml
+++ b/app/src/main/res/layout/activity_wishlistactivity.xml
@@ -39,7 +39,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="5dp"
                     android:text="Place"
-                    android:textColor="#3cb6d3"
+                    android:textColor="#FB8C00"
                     android:textSize="20sp"
                     android:textStyle="bold" />
 
@@ -73,7 +73,7 @@
             android:layout_width="match_parent"
             android:layout_height="1dp"
             android:layout_marginTop="5dp"
-            android:background="#3cb6d3" />
+            android:background="#FB8C00" />
 
     </LinearLayout>
 
