--- a/app/src/main/res/layout/row_overview.xml
+++ b/app/src/main/res/layout/row_overview.xml
@@ -11,7 +11,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Overview"
-        android:textColor="#2F4F4F"
+        android:textColor="#FB8C00"
         android:textSize="25sp" />
 
     <LinearLayout
