--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3cb6d3</color>
-    <color name="colorPrimaryDark">#29a4d1</color>
-    <color name="colorAccent">#03DAC5</color>
+    <color name="colorPrimary">#FB8C00</color>
+    <color name="colorPrimaryDark">#FB8C00</color>
+    <color name="colorAccent">#FFB74D</color>
 
     <color name="simpletooltip_background">@color/colorPrimary</color>
     <color name="simpletooltip_text">@android:color/primary_text_light</color>
