changed db schema

--- a/app/src/main/res/xml/preferences.xml
+++ b/app/src/main/res/xml/preferences.xml
@@ -23,7 +23,7 @@
         <Preference
             app:icon="@drawable/addpost"
             app:key="newpost"
-            app:summary="Post new apartment details"
+            app:summary="Post new location details"
             app:title="Add a new post" />
     </PreferenceCategory>
     <PreferenceCategory>
