--- a/app/src/main/res/layout/activity_apartment_details.xml
+++ b/app/src/main/res/layout/activity_apartment_details.xml
@@ -45,14 +45,29 @@
 
             <androidx.viewpager.widget.ViewPager
                 android:id="@+id/imageslider"
-                android:layout_width="match_parent"
-                android:layout_height="250dp" />
+                android:layout_width="352dp"
+                android:layout_height="400dp"
+                android:layout_gravity="center"
+                android:layout_marginStart="20dp"
+                android:layout_marginEnd="20dp" />
 
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_gravity="center"
                 android:orientation="horizontal">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="5dp"
+                    android:layout_marginTop="5dp"
+                    android:text="Title : "
+                    android:textColor="@color/quantum_black_100"
+                    android:textSize="26sp"
+                    android:textStyle="bold" />
+
 
                 <TextView
                     android:id="@+id/title"
@@ -62,8 +77,7 @@
                     android:layout_marginTop="5dp"
                     android:text="Title"
                     android:textColor="@color/quantum_black_100"
-                    android:textSize="22sp"
-                    android:textStyle="bold" />
+                    android:textSize="25sp" />
 
 
             </LinearLayout>
@@ -71,7 +85,17 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_gravity="center"
                 android:orientation="horizontal">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="5dp"
+                    android:text="Place : "
+                    android:textColor="@color/quantum_black_100"
+                    android:textSize="26sp"
+                    android:textStyle="bold" />
 
                 <TextView
                     android:id="@+id/place"
@@ -80,10 +104,106 @@
                     android:layout_marginLeft="5dp"
                     android:text="place"
                     android:textColor="@color/quantum_black_100"
-                    android:textSize="25sp"
-                    android:textStyle="bold" />
+                    android:textSize="25sp" />
             </LinearLayout>
 
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="5dp"
+                    android:text="Prasang : "
+                    android:textColor="@color/quantum_black_100"
+                    android:textSize="26sp"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:id="@+id/des"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="5dp"
+                    android:text="prasang"
+                    android:textColor="@color/quantum_black_100"
+                    android:textSize="25sp" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="5dp"
+                    android:text="Address : "
+                    android:textColor="@color/quantum_black_100"
+                    android:textSize="26sp"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:id="@+id/address"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="5dp"
+                    android:text="Address"
+                    android:textColor="@color/quantum_black_100"
+                    android:textSize="25sp" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="5dp"
+                    android:text="Date of Pransag : "
+                    android:textColor="@color/quantum_black_100"
+                    android:textSize="26sp"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:id="@+id/date"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="5dp"
+                    android:text="place"
+                    android:textColor="@color/quantum_black_100"
+                    android:textSize="25sp" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="5dp"
+                    android:text="Sutra : "
+                    android:textColor="@color/quantum_black_100"
+                    android:textSize="26sp"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:id="@+id/sutra"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="5dp"
+                    android:text="Sutra"
+                    android:textColor="@color/quantum_black_100"
+                    android:textSize="25sp" />
+            </LinearLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
