--- a/app/src/main/res/layout/activity_post_list.xml
+++ b/app/src/main/res/layout/activity_post_list.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="#ffffff"
-    tools:context=".PostList">
+    tools:context=".Activity.prasangList.PrasangList">
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
