--- a/app/src/main/res/layout/activity_apartment_dialog.xml
+++ b/app/src/main/res/layout/activity_apartment_dialog.xml
@@ -8,8 +8,8 @@
 
     <ImageView
         android:id="@+id/dialogimage"
-        android:layout_width="120dp"
-        android:layout_height="120dp"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
         android:layout_marginLeft="5dp"
         android:layout_marginTop="5dp"
         android:layout_marginBottom="5dp"
@@ -29,7 +29,7 @@
         android:textSize="18sp" />
 
     <TextView
-        android:id="@+id/sutra"
+        android:id="@+id/place1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/title"
@@ -41,10 +41,10 @@
         android:textSize="18sp" />
 
     <TextView
-        android:id="@+id/place1"
+        android:id="@+id/sutra"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/sutra"
+        android:layout_below="@+id/place1"
         android:layout_marginLeft="6dp"
         android:layout_marginTop="5dp"
         android:layout_toRightOf="@+id/dialogimage"
@@ -60,7 +60,7 @@
         android:layout_alignParentEnd="true"
         android:layout_marginTop="7dp"
         android:layout_marginBottom="20dp"
-        android:layout_toRightOf="@id/sutra"
+        android:layout_toRightOf="@id/place1"
         android:src="@drawable/next"
         android:text="More Details"
 
