--- a/app/src/main/res/layout/activity_apartment_details.xml
+++ b/app/src/main/res/layout/activity_apartment_details.xml
@@ -3,8 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Activity.apartmentDetails.PrasangDetails">
-
+    tools:context=".Activity.prasangDetails.PrasangDetails">
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
@@ -172,16 +171,7 @@
                     android:textSize="20sp" />
             </LinearLayout>
 
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
-
-            </LinearLayout>
-
         </LinearLayout>
-
 
     </ScrollView>
 
