--- a/app/src/main/res/layout/fragment_viewpager.xml
+++ b/app/src/main/res/layout/fragment_viewpager.xml
@@ -5,45 +5,22 @@
     android:layout_height="match_parent"
     tools:context=".Activity.prasangDetails.PrasangDetails">
 
-    <androidx.appcompat.widget.Toolbar
-        android:id="@+id/toolbar"
-        android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize"
-        android:layout_alignParentTop="true"
-        android:background="#FB8C00">
-
-        <ImageView
-            android:layout_width="50dp"
-            android:layout_height="55dp"
-            android:src="@drawable/logo" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="5dp"
-            android:text="Vicharan"
-            android:textColor="#ffffff"
-            android:textSize="28sp"
-            android:textStyle="bold" />
-
-    </androidx.appcompat.widget.Toolbar>
-
-
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_below="@id/toolbar">
+        android:layout_height="match_parent">
 
         <LinearLayout
             android:id="@+id/mainLayout"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="30dp"
             android:orientation="vertical">
 
 
             <androidx.viewpager.widget.ViewPager
                 android:id="@+id/imageslider"
-                android:layout_width="match_parent"
+                android:layout_width="350dp"
+                android:layout_gravity="center"
                 android:layout_height="350dp" />
 
 
@@ -174,10 +151,4 @@
         </LinearLayout>
 
     </ScrollView>
-
-    <FrameLayout
-        android:id="@+id/loginlayout"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"></FrameLayout>
-
 </RelativeLayout>
