--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -18,17 +18,8 @@
     </style>
 
     <style name="Divider">
-        <item name="android:background">#FFA726</item>
+        <item name="android:background">#a31519</item>
         //you can give your color here. that will change all divider color in your app.
-    </style>
-
-    <style name="Divider.Horizontal" parent="Divider">
-        <item name="android:layout_width">match_parent</item>
-        <item name="android:layout_height">1dp</item>
-        <item name="android:layout_marginTop">20dp</item>
-        <item name="android:layout_below">@+id/price_slider</item>
-        // You can change thickness here.
-
     </style>
 
     <style name="simpletooltip_default" parent="@android:style/TextAppearance.Medium"></style>>
