--- a/app/src/main/res/layout/activity_profile_details.xml
+++ b/app/src/main/res/layout/activity_profile_details.xml
@@ -13,7 +13,7 @@
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
         android:layout_alignParentTop="true"
-        android:background="#FB8C00 ">
+        android:background="@color/toolbarColor">
 
         <TextView
             android:layout_width="wrap_content"
